Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28435

Windows 8: QWizard Areo style title bar is too large, wizard window cannot be moved by dragging the title bar

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.5, 5.1.0
    • 4.8.4
    • None
    • Windows 8, MSVC 2012 64bit
    • Qt 5: 5fb6331a17a5c43b91daddf4a30e46ccbd1419b5, Qt 4: e11bb8e02fa1f2f933784b9d6d6483c5547e5522

      When comparing to another wizard (say printer control panel/ add), it can be seen that the title bar is too large.

      It seems that the trick of reducing the frame size by passing a negative value to WM_NCCALCSIZE simply does not work on Windows 8.

        For Gerrit Dashboard: QTBUG-28435
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes